# voluta

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: publish-to-pypi.yml  run-tests.yml
src/: lib.rs
tests/: conftest.py  pytest.ini  test_chunk_boundary.py  test_chunk_sizes.py  test_empty_pattern.py  test_http_streaming.py  test_performance.py  test_special_characters.py  test_streaming.py  test_text_matcher.py  test_text_search.py  test_whole_word.py
tests/benchmark/: fuzz.py  fuzz_test_voluta.py  stress.py
voluta/: __init__.py  voluta.pyi
