[build-system]
requires = ["maturin>=1.8.3,<2.0.0"]
build-backend = "maturin"

[project]
name = "voluta"
version = "0.2.1"
description = "A high-performance text pattern matching library built with Rust"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "utils.rs", email = "dev@utils.rs" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "exceptiongroup>=1.2.2",
    "maturin>=1.8.3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "voluta.voluta"
python-packages = ["voluta"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
